Corrected spacing on top navbar between title and links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,4 +333,6 @@
   }
   
   
-  
+  .top-bar::after, .top-bar::before{
+    content: none;
+  }
